infra/service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: rshub
spec:
  hosts:
  - www.rshub.com
  ports:
  - number: 8080
    name: https
    protocol: HTTPS
  resolution: DNS
